--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "vuelearn",
+  "name": "vue2-demo",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "zhoou",
+  "author": "Rain Wang <rainwzp@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "unit": "karma start test/unit/karma.conf.js --single-run",
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "vue": "^2.0.1",
-    "vuex": "^2.0.0",
+    "vue": "^2.1.10",
+    "vuex": "^2.1.1",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.3"
+    "vue-router": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -27,36 +27,26 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
-    "babel-runtime": "^6.18.0",
-    "bootstrap-validator": "^0.11.8",
-    "chai": "^3.5.0",
     "chalk": "^1.1.3",
-    "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
-    "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
-    "cssnext-loader": "^1.0.1",
     "eslint": "^3.7.1",
-    "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-promise": "^2.0.1",
+    "eslint-config-standard": "^6.1.0",
+    "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "exports-loader": "^0.6.3",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "friendly-errors-webpack-plugin": "^1.1.2",
     "function-bind": "^1.0.2",
-    "glob": "^7.1.1",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
-    "imports-loader": "^0.7.0",
-    "inject-loader": "^2.0.1",
-    "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
+    "cross-env": "^3.1.3",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
@@ -67,21 +57,24 @@
     "karma-webpack": "^1.7.0",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
-    "modernizr": "^3.3.1",
-    "nightwatch": "^0.9.8",
-    "opn": "^4.0.2",
-    "ora": "^0.3.0",
-    "path": "^0.12.7",
-    "phantomjs-prebuilt": "^2.1.3",
-    "selenium-server": "2.53.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.4",
+    "chai": "^3.5.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
+    "inject-loader": "^2.0.1",
+    "babel-plugin-istanbul": "^3.0.0",
+    "phantomjs-prebuilt": "^2.1.3",
+    "chromedriver": "^2.21.2",
+    "cross-spawn": "^4.0.2",
+    "nightwatch": "^0.9.8",
+    "selenium-server": "2.53.1",
+    "semver": "^5.3.0",
+    "opn": "^4.0.2",
+    "ora": "^0.3.0",
+    "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
-    "vue-loader": "^9.4.0",
+    "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
