--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
+    "imports-loader": "^0.7.0",
     "json-loader": "^0.5.4",
     "cross-env": "^3.1.3",
     "karma": "^1.3.0",
